# loopbuster

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  debug_fuzzy.py  pr-body.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pypi.yml
agc/: DEPLOYMENT.md  executor.ts  logger.ts  package.json  registry.ts  tracer.ts  validator.ts
agc/examples/: daily_report_skill.ts
agc/references/github.com/GitHub - iammm0_secbot_ ⚠️ 本工具仅用于授权的安全测试。未经授权使用本工具进行网络攻击是违法的。一个智能化的自动化渗透测试机器人，具备_2026-05-31T15-37-36/: page.md
agc/src/: agc.ts
archive/agc/: AGC_STRUCTURE.md  README.md  backend.ts  middleware.ts  storage.ts  telemetry.ts
archive/agc/references/github.com/iammm0 (Mingjun Zhao) _ Repositories · GitHub_2026-05-31T15-39-40/: page.md
archive/agc/src/: semantic.ts
archive/agc/tests/: core.test.ts
benchmark/: BENCHMARK_SPEC.md  RESULTS.md  ROADMAP.md  __init__.py  evaluate.py  generator.py  scenarios.py  templates.py  tool_lib.py
benchmark/scenarios/: manifest.json  synth_cycle_0201.json  synth_cycle_0202.json  synth_cycle_0203.json  synth_cycle_0204.json  synth_cycle_0205.json  synth_cycle_0206.json  synth_cycle_0207.json  synth_cycle_0208.json  synth_cycle_0209.json  synth_cycle_0210.json  synth_cycle_0211.json  synth_cycle_0212.json  synth_cycle_0213.json  synth_cycle_0214.json  synth_cycle_0215.json  synth_cycle_0216.json  synth_cycle_0217.json  synth_cycle_0218.json  synth_cycle_0219.json  synth_cycle_0220.json  synth_cycle_0221.json  synth_cycle_0222.json  synth_cycle_0223.json  synth_cycle_0224.json  synth_cycle_0225.json  synth_cycle_0226.json  synth_cycle_0227.json  synth_cycle_0228.json  synth_cycle_0229.json  synth_cycle_0230.json  synth_cycle_0231.json  synth_cycle_0232.json  synth_cycle_0233.json  synth_cycle_0234.json  synth_cycle_0235.json  synth_cycle_0236.json  synth_cycle_0237.json  synth_cycle_0238.json  synth_cycle_0239.json  (+371 more)
dashboard/: index.html
notebooks/: loopbuster_demo.ipynb
references/github.com/GitHub - iammm0_secbot_ ⚠️ 本工具仅用于授权的安全测试。未经授权使用本工具进行网络攻击是违法的。一个智能化的自动化渗透测试机器人，具备_2026-06-02T10-49-26/: page.md
scripts/: demo_animation.py  generate_gif.sh
src/loopbuster/: __init__.py  async_engine.py  circuit.py  decorator.py  engine.py  explain.py  guards.py  mcp_server.py  progress.py  risk.py  similarity.py  similarity_backend.py  strategies.py  types.py
src/loopbuster/api/: server.py
src/loopbuster/backends/: __init__.py  base.py
src/loopbuster/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  langgraph.py  llamaindex.py
src/loopbuster/pricing/: __init__.py  models.py
src/loopbuster/storage/: __init__.py  redis.py
tests/: test_advanced.py  test_core.py  test_deep_detection.py  test_mcp_server.py  test_similarity_enhanced.py
tests/loopbuster/: test_similarity.py  test_strategies.py
