[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopbuster"
version = "0.2.0"
description = "A unified anti-dead-loop toolkit for LLM agents — loop detection, budget ceiling, state stasis guard, and circuit breaker in one library."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Jake Liu"}]
keywords = [
    "agent", "loop", "detection", "guardrail", "safety",
    "llm", "ai-agent", "circuit-breaker", "infinite-loop",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.6", "build>=1.0"]
all = ["openai", "anthropic"]

[project.urls]
Homepage = "https://github.com/liuchunwei/loopbuster"
Issues = "https://github.com/liuchunwei/loopbuster/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/loopbuster"]

[tool.ruff]
line-length = 100
target-version = "py39"
